--- a/includes/header.html
+++ b/includes/header.html
@@ -1,57 +1,74 @@
 <link rel="stylesheet" href="styles.css">
 <!-- header.html -->
-<header class="d-flex flex-column w-100 position-relative">
-  <!-- Logo Container -->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col"> <!--Empty--> </div>
-      <div class="col d-flex flex-column align-items-center position-relative">
-        <!-- Instagram Icon -->
-        <div class="position-absolute" style="top: 1rem; right: 1rem;">
-          <img class="img-fluid" src="/Images/Instagram.svg" style="width: clamp(2.5rem, 5vw, 4rem); height: clamp(2.5rem, 5vw, 4rem);">
-        </div>
-        <!-- Hero Image -->
-        <img src="/Images/Hero.png" style="width: 36rem; height: auto;">
-      </div>
-      <div class="col"></div>
-    </div>
-  </div>
-  <!--paper scrap background-->
-  <div style="width: 100%;">
-    <div class="row w-100 justify-content-center"> 
-      <!--Navigation-->
-      <nav class="col-12 d-flex justify-content-center align-items-center mb-3">
-        <ul class="list-unstyled d-flex gap-4 mb-0">
-          <li class="nav-link"><a href="index.html" class="text-decoration-none text-dark">Home</a></li>
-          <li class="nav-link"><a href="#" class="text-decoration-none text-dark">About</a></li>
-          <li class="nav-link"><a href="#" class="text-decoration-none text-dark">Designers</a></li>
-        </ul>
-      </nav>
-      <!--Information-->
-      <div id="info" class="d-flex flex-column mx-auto w-100 justify-content-center align-items-center "> 
-        <div class="row justify-content-center align-items-center">
-        </div>
-        <div class="d-flex flex-column justify-content-start">
-          <div class="mb-3">
-            <p>Please join us for our virtual receptions! Our talented graduates will present and discuss their work for friends, family and fans.</p>
-          </div>
-          <div class="mb-3">
-            <strong>
-              <p>6-7 p.m. Tuesday May 6<br>
-              1-2 p.m. Wednesday May 7</p>
-            </strong>
-          </div>
-          <div class="mb-3">
-            <strong>
-             <p> Join the Zoom: PlaceholderForZoomLink<br>
-              Zoom ID: XXX XXX XXXX<br>
-              Password: mpls2025</p>
-            </strong>
+<header>
+  <div class="container-fluid py-4">
+    <!-- Row 1: 80% width, centered -->
+    <div class="row justify-content-center mb-4">
+      <div class="col-12 col-md-10 col-lg-8">
+        <div class=" p-3 text-center">
+          <div class="row mb-4">
+            <div class="col-md-4 p-3 justify-content-center" style="width: 3rem; height: 3rem;">
+              <img src="images/Instagram.svg" alt="Instagram">
+            </div>
+            <div class="col-md-4  p-3 ">
+              <!--Empty-->
+            </div>
+            <div class="col-md-4  p-3 justify-content-end">
+              <!--Empty-->>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
   
- 
+    <!-- Row 2: 3-column full-width -->
+    <div class="container-fluid">
+      <div class="row g-3 align-items-stretch">
+        <!-- Column 1: Smaller -->
+        <div class="col-12 col-md-3">
+          <div class="h-100 min-h-300 p-3">
+            <!---Empty-->>
+          </div>
+        </div>
+    
+        <!-- Column 2: Bigger -->
+        <div class="col-12 col-md-6">
+          <div class="h-100 min-h-300 p-3">
+            <!---Empty-->>
+          </div>
+        </div>
+    
+        <!-- Column 3: Smaller -->
+        <div class="col-12 col-md-3">
+          <div class="h-100 min-h-300 p-3">
+            <!--Empty-->>
+          </div>
+        </div>
+      </div>
+    </div> 
+     <div class="Row justify-content-center">    
+            <nav class="navbar navbar-expand-lg  top-navbar justify-content-center" data-toggle="sticky-onscroll">
+              <div class="container justify-content-center gap-4">
+                <div id="navbarSupportedContent" class="justify-content-center">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Designer</a>
+                    </li>
+                  </ul>
+                </div> 
+                </div>
+              </div>
+            </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </header>
+ 
